kubernetes/apps/home/home-assistant/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: home
  labels:
    app: home-assistant
spec:
  selector:
    app: home-assistant
  ports:
  - name: http
    port: 80
    targetPort: 8123
  type: ClusterIP
